--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@ href="./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd13-belgian-grand-prix"><span
 class="header-section-number">1.2</span> Rd13 Belgian Grand Prix</h2>
 <p><a href="./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1.pdf">FP1:
