--- a/index.html
+++ b/index.html
@@ -33,53 +33,56 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd15-dutch-grand-prix"
+id="toc-rd15-dutch-grand-prix"><span
+class="toc-section-number">1.1</span> Rd15 Dutch Grand Prix</a></li>
 <li><a href="#rd14-hungarian-grand-prix"
 id="toc-rd14-hungarian-grand-prix"><span
-class="toc-section-number">1.1</span> Rd14 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd14 Hungarian Grand Prix</a></li>
 <li><a href="#rd13-belgian-grand-prix"
 id="toc-rd13-belgian-grand-prix"><span
-class="toc-section-number">1.2</span> Rd13 Belgian Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd13 Belgian Grand Prix</a></li>
 <li><a href="#rd12-british-grand-prix"
 id="toc-rd12-british-grand-prix"><span
-class="toc-section-number">1.3</span> Rd12 British Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd12 British Grand Prix</a></li>
 <li><a href="#rd11-austrian-grand-prix"
 id="toc-rd11-austrian-grand-prix"><span
-class="toc-section-number">1.4</span> Rd11 Austrian Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd11 Austrian Grand Prix</a></li>
 <li><a href="#rd10-canadian-grand-prix"
 id="toc-rd10-canadian-grand-prix"><span
-class="toc-section-number">1.5</span> Rd10 Canadian Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd10 Canadian Grand Prix</a></li>
 <li><a href="#rd09-spanish-grand-prix"
 id="toc-rd09-spanish-grand-prix"><span
-class="toc-section-number">1.6</span> Rd09 Spanish Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd09 Spanish Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.7</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.8</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.9</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.9</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-saudi-arabian-grand-prix"
 id="toc-rd05-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.10</span> Rd05 Saudi Arabian Grand
+class="toc-section-number">1.11</span> Rd05 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd04-bahrain-grand-prix"
 id="toc-rd04-bahrain-grand-prix"><span
-class="toc-section-number">1.11</span> Rd04 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd04 Bahrain Grand Prix</a></li>
 <li><a href="#rd03-japanese-grand-prix"
 id="toc-rd03-japanese-grand-prix"><span
-class="toc-section-number">1.12</span> Rd03 Japanese Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd03 Japanese Grand Prix</a></li>
 <li><a href="#rd02-chinese-grand-prix"
 id="toc-rd02-chinese-grand-prix"><span
-class="toc-section-number">1.13</span> Rd02 Chinese Grand Prix</a></li>
+class="toc-section-number">1.14</span> Rd02 Chinese Grand Prix</a></li>
 <li><a href="#rd01-australian-grand-prix"
 id="toc-rd01-australian-grand-prix"><span
-class="toc-section-number">1.14</span> Rd01 Australian Grand
+class="toc-section-number">1.15</span> Rd01 Australian Grand
 Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.15</span> Pre-season test</a></li>
+class="toc-section-number">1.16</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -114,8 +117,8 @@ Prix</a></li>
 <li><a href="#rd16-italian-grand-prix"
 id="toc-rd16-italian-grand-prix"><span
 class="toc-section-number">2.9</span> Rd16 Italian Grand Prix</a></li>
-<li><a href="#rd15-dutch-grand-prix"
-id="toc-rd15-dutch-grand-prix"><span
+<li><a href="#rd15-dutch-grand-prix-1"
+id="toc-rd15-dutch-grand-prix-1"><span
 class="toc-section-number">2.10</span> Rd15 Dutch Grand Prix</a></li>
 <li><a href="#rd14-belgian-grand-prix"
 id="toc-rd14-belgian-grand-prix"><span
@@ -172,8 +175,16 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="rd14-hungarian-grand-prix"><span
-class="header-section-number">1.1</span> Rd14 Hungarian Grand Prix</h2>
+<h2 data-number="1.1" id="rd15-dutch-grand-prix"><span
+class="header-section-number">1.1</span> Rd15 Dutch Grand Prix</h2>
+<p><a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1: race
+control message csv</a></p>
+<h2 data-number="1.2" id="rd14-hungarian-grand-prix"><span
+class="header-section-number">1.2</span> Rd14 Hungarian Grand Prix</h2>
 <p><a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -211,8 +222,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd13-belgian-grand-prix"><span
-class="header-section-number">1.2</span> Rd13 Belgian Grand Prix</h2>
+<h2 data-number="1.3" id="rd13-belgian-grand-prix"><span
+class="header-section-number">1.3</span> Rd13 Belgian Grand Prix</h2>
 <p><a href="./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -252,8 +263,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd12-british-grand-prix"><span
-class="header-section-number">1.3</span> Rd12 British Grand Prix</h2>
+<h2 data-number="1.4" id="rd12-british-grand-prix"><span
+class="header-section-number">1.4</span> Rd12 British Grand Prix</h2>
 <p><a href="./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -289,8 +300,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd12-British-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd11-austrian-grand-prix"><span
-class="header-section-number">1.4</span> Rd11 Austrian Grand Prix</h2>
+<h2 data-number="1.5" id="rd11-austrian-grand-prix"><span
+class="header-section-number">1.5</span> Rd11 Austrian Grand Prix</h2>
 <p><a href="./2025/2025-Rd11-Austrian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -327,8 +338,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd11-Austrian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd10-canadian-grand-prix"><span
-class="header-section-number">1.5</span> Rd10 Canadian Grand Prix</h2>
+<h2 data-number="1.6" id="rd10-canadian-grand-prix"><span
+class="header-section-number">1.6</span> Rd10 Canadian Grand Prix</h2>
 <p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -365,8 +376,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd10-Canadian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd09-spanish-grand-prix"><span
-class="header-section-number">1.6</span> Rd09 Spanish Grand Prix</h2>
+<h2 data-number="1.7" id="rd09-spanish-grand-prix"><span
+class="header-section-number">1.7</span> Rd09 Spanish Grand Prix</h2>
 <p><a href="./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -402,8 +413,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd09-Spanish-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.7</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.8" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.8</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -436,8 +447,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.8" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.8</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.9" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.9</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -485,8 +496,8 @@ href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.9</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.10" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.10</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -523,8 +534,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.10" id="rd05-saudi-arabian-grand-prix"><span
-class="header-section-number">1.10</span> Rd05 Saudi Arabian Grand
+<h2 data-number="1.11" id="rd05-saudi-arabian-grand-prix"><span
+class="header-section-number">1.11</span> Rd05 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -571,8 +582,8 @@ href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.11" id="rd04-bahrain-grand-prix"><span
-class="header-section-number">1.11</span> Rd04 Bahrain Grand Prix</h2>
+<h2 data-number="1.12" id="rd04-bahrain-grand-prix"><span
+class="header-section-number">1.12</span> Rd04 Bahrain Grand Prix</h2>
 <p><a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -600,8 +611,8 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
-<h2 data-number="1.12" id="rd03-japanese-grand-prix"><span
-class="header-section-number">1.12</span> Rd03 Japanese Grand Prix</h2>
+<h2 data-number="1.13" id="rd03-japanese-grand-prix"><span
+class="header-section-number">1.13</span> Rd03 Japanese Grand Prix</h2>
 <p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -638,8 +649,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.13" id="rd02-chinese-grand-prix"><span
-class="header-section-number">1.13</span> Rd02 Chinese Grand Prix</h2>
+<h2 data-number="1.14" id="rd02-chinese-grand-prix"><span
+class="header-section-number">1.14</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -679,8 +690,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd01-australian-grand-prix"><span
-class="header-section-number">1.14</span> Rd01 Australian Grand
+<h2 data-number="1.15" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.15</span> Rd01 Australian Grand
 Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
@@ -719,8 +730,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.15" id="pre-season-test"><span
-class="header-section-number">1.15</span> Pre-season test</h2>
+<h2 data-number="1.16" id="pre-season-test"><span
+class="header-section-number">1.16</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
@@ -1110,7 +1121,7 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd16-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.10" id="rd15-dutch-grand-prix"><span
+<h2 data-number="2.10" id="rd15-dutch-grand-prix-1"><span
 class="header-section-number">2.10</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
