--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-3_rcm.csv">FP3: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd15-Dutch-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd15-Dutch-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd15-Dutch-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd14-hungarian-grand-prix"><span
 class="header-section-number">1.2</span> Rd14 Hungarian Grand Prix</h2>
 <p><a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-1.pdf">FP1:
